--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -14,7 +14,6 @@ jobs:
       pull-requests: write
     
     steps:
-    # ================== SETUP MÔTRƯỜNG ==================
     - name: Checkout code
       uses: actions/checkout@v4
       
@@ -33,7 +32,6 @@ jobs:
         cache: true
         cache-dependency-path: '**/*.csproj'
 
-    # ================== SETUP PYTHON CHO EXCEL ==================
     - name: Setup Python for Excel generation
       uses: actions/setup-python@v4
       with:
@@ -41,10 +39,8 @@ jobs:
         
     - name: Install Python dependencies
       run: |
-        # Cài đặt thư viện Python cần thiết để tạo file Excel
         pip install pandas openpyxl xlsxwriter lxml beautifulsoup4
         
-    # ================== BUILD VÀ CHẠY TEST ==================
     - name: Restore dependencies
       run: dotnet restore BlindTreasure.API.sln
       
@@ -56,27 +52,23 @@ jobs:
       
     - name: Run unit tests
       run: |
-        # Chạy unit tests và tạo file coverage + test results
         dotnet test BlindTreasure.API.sln \
           --no-build \
           --configuration Release \
           --verbosity normal \
-          --collect:"XPlat Code Coverage" \           # Tạo file coverage
+          --collect:"XPlat Code Coverage" \
           --results-directory ./TestResults/ \
-          --logger "trx;LogFileName=test-results.trx"  # Tạo file test results
+          --logger "trx;LogFileName=test-results.trx"
       
     - name: Generate coverage report
       run: |
-        # Tạo báo cáo coverage từ file XML thành HTML, JSON, Markdown
         dotnet tool run reportgenerator \
           -reports:"./TestResults/**/coverage.cobertura.xml" \
           -targetdir:"./coveragereport" \
           -reporttypes:"Html;Badges;TextSummary;JsonSummary;MarkdownSummaryGithub;Xml;Cobertura"
       
-    # ================== TẠO FILE EXCEL - PHẦN QUAN TRỌNG NHẤT ==================
     - name: Create Excel coverage report
       run: |
-        # Tạo file Python script inline để generate Excel report
         cat > generate_excel_report.py << 'EOF'
         import pandas as pd
         import json
@@ -87,7 +79,7 @@ jobs:
         from bs4 import BeautifulSoup
         
         def parse_cobertura_xml():
-            """Parse file XML coverage để lấy dữ liệu chi tiết"""
+            """Parse Cobertura XML để lấy thông tin chi tiết"""
             xml_files = glob.glob('./TestResults/**/coverage.cobertura.xml', recursive=True)
             if not xml_files:
                 return None
@@ -95,11 +87,11 @@ jobs:
             tree = ET.parse(xml_files[0])
             root = tree.getroot()
             
-            # Lấy thông tin tổng quan về coverage
+            # Thông tin tổng quan
             line_rate = float(root.get('line-rate', 0)) * 100
             branch_rate = float(root.get('branch-rate', 0)) * 100
             
-            # Lấy chi tiết coverage theo từng class/file
+            # Chi tiết theo class/file
             classes_data = []
             packages = root.findall('.//package')
             
@@ -113,7 +105,7 @@ jobs:
                     class_line_rate = float(cls.get('line-rate', 0)) * 100
                     class_branch_rate = float(cls.get('branch-rate', 0)) * 100
                     
-                    # Đếm số dòng được cover và chưa cover
+                    # Đếm số dòng
                     lines = cls.findall('.//line')
                     total_lines = len(lines)
                     covered_lines = len([l for l in lines if l.get('hits', '0') != '0'])
@@ -138,7 +130,7 @@ jobs:
             }
         
         def parse_test_results():
-            """Parse file TRX để lấy kết quả test chi tiết"""
+            """Parse test results từ TRX files"""
             trx_files = glob.glob('./TestResults/**/test-results.trx', recursive=True)
             test_data = []
             
@@ -148,14 +140,13 @@ jobs:
                         content = f.read()
                         soup = BeautifulSoup(content, 'xml')
                         
-                    # Parse từng test result
+                    # Parse test results
                     test_results = soup.find_all('UnitTestResult')
                     for result in test_results:
                         test_name = result.get('testName', 'Unknown')
                         outcome = result.get('outcome', 'Unknown')
                         duration = result.get('duration', '00:00:00')
                         
-                        # Lấy error message nếu test fail
                         error_info = result.find('ErrorInfo')
                         error_message = ""
                         if error_info:
@@ -175,27 +166,26 @@ jobs:
             return test_data
         
         def create_excel_report():
-            """🔥 HÀM CHÍNH TẠO FILE EXCEL 🔥"""
+            """Tạo báo cáo Excel với nhiều sheet"""
             
-            # Parse dữ liệu từ các file output
+            # Parse data
             coverage_data = parse_cobertura_xml()
             test_data = parse_test_results()
             
-            # Tạo tên file Excel với timestamp
+            # Tạo Excel writer
             timestamp = datetime.now().strftime("%Y%m%d_%H%M%S")
             excel_file = f'./coveragereport/Coverage_Report_{timestamp}.xlsx'
             
-            # 📊 TẠO FILE EXCEL VỚI NHIỀU SHEET
             with pd.ExcelWriter(excel_file, engine='xlsxwriter') as writer:
                 workbook = writer.book
                 
-                # 🎨 ĐỊNH NGHĨA CÁC FORMAT CHO EXCEL
+                # Định nghĩa formats
                 header_format = workbook.add_format({
                     'bold': True,
                     'text_wrap': True,
                     'valign': 'top',
-                    'fg_color': '#4472C4',      # Màu nền xanh
-                    'font_color': 'white',       # Chữ màu trắng
+                    'fg_color': '#4472C4',
+                    'font_color': 'white',
                     'border': 1
                 })
                 
@@ -212,7 +202,7 @@ jobs:
                     'border': 1
                 })
                 
-                # 📋 SHEET 1: SUMMARY - Tổng quan
+                # Sheet 1: Summary
                 summary_data = []
                 if coverage_data:
                     summary_data = [
@@ -233,13 +223,12 @@ jobs:
                 df_summary = pd.DataFrame(summary_data[1:], columns=summary_data[0])
                 df_summary.to_excel(writer, sheet_name='Summary', index=False)
                 
-                # Format sheet Summary
                 worksheet_summary = writer.sheets['Summary']
                 worksheet_summary.set_column('A:A', 20)
                 worksheet_summary.set_column('B:B', 15)
                 worksheet_summary.set_column('C:C', 15)
                 
-                # Áp dụng format cho từng cell
+                # Apply formats to summary
                 for row_num in range(len(df_summary) + 1):
                     for col_num in range(len(df_summary.columns)):
                         if row_num == 0:
@@ -247,13 +236,12 @@ jobs:
                         else:
                             worksheet_summary.write(row_num, col_num, df_summary.iloc[row_num-1, col_num], cell_format)
                 
-                # 📊 SHEET 2: COVERAGE DETAILS - Chi tiết coverage theo class
+                # Sheet 2: Detailed Coverage by Class
                 if coverage_data and coverage_data['classes']:
                     df_classes = pd.DataFrame(coverage_data['classes'])
                     df_classes.to_excel(writer, sheet_name='Coverage Details', index=False)
                     
                     worksheet_details = writer.sheets['Coverage Details']
-                    # Set độ rộng cột
                     worksheet_details.set_column('A:A', 25)  # Package
                     worksheet_details.set_column('B:B', 30)  # Class
                     worksheet_details.set_column('C:C', 40)  # File
@@ -263,7 +251,7 @@ jobs:
                     worksheet_details.set_column('G:G', 15)  # Covered Lines
                     worksheet_details.set_column('H:H', 15)  # Uncovered Lines
                     
-                    # Áp dụng format
+                    # Apply formats
                     for row_num in range(len(df_classes) + 1):
                         for col_num in range(len(df_classes.columns)):
                             if row_num == 0:
@@ -271,7 +259,7 @@ jobs:
                             else:
                                 worksheet_details.write(row_num, col_num, df_classes.iloc[row_num-1, col_num], cell_format)
                 
-                # 🧪 SHEET 3: TEST RESULTS - Kết quả test chi tiết
+                # Sheet 3: Test Results
                 if test_data:
                     df_tests = pd.DataFrame(test_data)
                     df_tests.to_excel(writer, sheet_name='Test Results', index=False)
@@ -282,26 +270,26 @@ jobs:
                     worksheet_tests.set_column('C:C', 12)  # Duration
                     worksheet_tests.set_column('D:D', 60)  # Error Message
                     
-                    # Highlight test failed với màu đỏ
+                    # Apply formats
                     for row_num in range(len(df_tests) + 1):
                         for col_num in range(len(df_tests.columns)):
                             if row_num == 0:
                                 worksheet_tests.write(row_num, col_num, df_tests.columns[col_num], header_format)
                             else:
                                 cell_value = df_tests.iloc[row_num-1, col_num]
-                                # Highlight failed tests với background màu đỏ nhạt
+                                # Highlight failed tests
                                 if col_num == 1 and cell_value == 'Failed':
                                     fail_format = workbook.add_format({
                                         'text_wrap': True,
                                         'valign': 'top',
                                         'border': 1,
-                                        'bg_color': '#FFE6E6'  # Màu đỏ nhạt
+                                        'bg_color': '#FFE6E6'
                                     })
                                     worksheet_tests.write(row_num, col_num, cell_value, fail_format)
                                 else:
                                     worksheet_tests.write(row_num, col_num, cell_value, cell_format)
                 
-                # 📈 SHEET 4: COVERAGE TRENDS - Xu hướng coverage (để mở rộng sau)
+                # Sheet 4: Coverage Trends (placeholder for future use)
                 trends_data = [
                     ['Date', 'Line Coverage (%)', 'Branch Coverage (%)', 'Total Tests'],
                     [datetime.now().strftime("%Y-%m-%d"), 
@@ -319,7 +307,7 @@ jobs:
                 worksheet_trends.set_column('C:C', 18)
                 worksheet_trends.set_column('D:D', 15)
                 
-                # Áp dụng format cho trends
+                # Apply formats
                 for row_num in range(len(df_trends) + 1):
                     for col_num in range(len(df_trends.columns)):
                         if row_num == 0:
@@ -330,14 +318,17 @@ jobs:
             print(f"✅ Excel report generated: {excel_file}")
             return excel_file
         
-        # Tạo CSV đơn giản để hiển thị trên GitHub
-        def create_csv_summary():
+        # Main execution
+        if __name__ == "__main__":
+            excel_file = create_excel_report()
+            
+            # Also create a simple CSV for GitHub display
             if os.path.exists('./coveragereport/Summary.json'):
                 try:
                     with open('./coveragereport/Summary.json', 'r') as f:
                         summary = json.load(f)
                     
-                    # Tạo file CSV summary
+                    # Create summary CSV
                     summary_csv = pd.DataFrame([
                         ['Line Coverage', summary.get('summary', {}).get('linecoverage', 'N/A')],
                         ['Branch Coverage', summary.get('summary', {}).get('branchcoverage', 'N/A')],
@@ -348,27 +339,19 @@ jobs:
                     print("✅ CSV summary created")
                 except Exception as e:
                     print(f"❌ Error creating CSV: {e}")
-        
-        # 🚀 CHẠY CÁC HÀM CHÍNH
-        if __name__ == "__main__":
-            excel_file = create_excel_report()  # 📊 TẠO FILE EXCEL
-            create_csv_summary()                # 📋 TẠO FILE CSV
         EOF
         
-        # 🐍 CHẠY PYTHON SCRIPT ĐỂ TẠO EXCEL
         python generate_excel_report.py
       
-    # ================== XỬ LÝ VÀ HIỂN THỊ KẾT QUẢ ==================
     - name: Extract and check coverage
       run: |
-        # Parse coverage percentage từ nhiều nguồn khác nhau
-        # Method 1: Từ Summary.txt
+        # Method 1: Try từ Summary.txt (dễ parse hơn)
         if [ -f "./coveragereport/Summary.txt" ]; then
           echo "📄 Using Summary.txt method"
           COVERAGE=$(grep -o 'Line coverage: [0-9]*\.*[0-9]*%' ./coveragereport/Summary.txt | grep -o '[0-9]*\.*[0-9]*' | head -1)
         fi
         
-        # Method 2: Từ JSON nếu method 1 fail  
+        # Method 2: Try từ JSON nếu method 1 fail
         if [ -z "$COVERAGE" ] && [ -f "./coveragereport/Summary.json" ]; then
           echo "📊 Using Summary.json method"
           if command -v jq &> /dev/null; then
@@ -387,7 +370,7 @@ jobs:
         echo "📈 Current coverage: $COVERAGE%"
         echo "COVERAGE=$COVERAGE" >> $GITHUB_ENV
         
-        # Kiểm tra threshold
+        # Set minimum coverage threshold
         THRESHOLD=70
         echo "🎯 Minimum threshold: $THRESHOLD%"
         
@@ -404,16 +387,14 @@ jobs:
           echo "::warning::Unable to parse coverage data"
         fi
       
-    # ================== HIỂN THỊ SUMMARY TRÊN GITHUB ==================
     - name: Display coverage summary
       run: |
-        # Tạo summary hiển thị trên GitHub Actions page
         echo "## 📊 Code Coverage Summary" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "**Coverage:** $COVERAGE%" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         
-        # Hiển thị bảng CSV nếu có
+        # Display CSV content if available
         if [ -f "./coveragereport/coverage_summary.csv" ]; then
           echo "### 📋 Quick Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
@@ -423,7 +404,6 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
         fi
         
-        # Hiển thị chi tiết trong code block
         echo '```' >> $GITHUB_STEP_SUMMARY
         cat ./coveragereport/Summary.txt 2>/dev/null || echo "Summary not available" >> $GITHUB_STEP_SUMMARY
         echo '```' >> $GITHUB_STEP_SUMMARY
@@ -431,7 +411,6 @@ jobs:
         echo "📊 **Excel Report Available**: Download the detailed Excel report from artifacts below" >> $GITHUB_STEP_SUMMARY
         echo "📋 [Download HTML report](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> $GITHUB_STEP_SUMMARY
       
-    # ================== COMMENT TRÊN PULL REQUEST ==================
     - name: Comment coverage on PR
       if: github.event_name == 'pull_request'
       uses: marocchino/sticky-pull-request-comment@v2
@@ -461,21 +440,20 @@ jobs:
           
           📊 **Excel Report Available**: Download detailed Excel report with multiple sheets from [artifacts](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
       
-    # ================== UPLOAD CÁC FILE ARTIFACTS ==================
     - name: Upload Excel coverage reports
       uses: actions/upload-artifact@v4
       if: always()
       with:
         name: excel-coverage-report
-        path: ./coveragereport/Coverage_Report_*.xlsx  # 📊 Upload file Excel
+        path: ./coveragereport/Coverage_Report_*.xlsx
         retention-days: 30
         
-    - name: Upload coverage reports  
+    - name: Upload coverage reports
       uses: actions/upload-artifact@v4
       if: always()
       with:
         name: coverage-report
-        path: ./coveragereport/**/*                    # 📋 Upload tất cả file coverage
+        path: ./coveragereport/**/*
         retention-days: 30
         
     - name: Upload test results
@@ -483,5 +461,5 @@ jobs:
       if: always()
       with:
         name: test-results
-        path: ./TestResults/**/*                       # 🧪 Upload file test results
+        path: ./TestResults/**/*
         retention-days: 30
