--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -65,51 +65,9 @@ jobs:
         mkdir -p coveragereport
         cat > generate_excel_report.py << 'EOF'
         import pandas as pd
-        import json
-        import xml.etree.ElementTree as ET
-        from datetime import datetime
-        import os
         import glob
+        from datetime import datetime
         from bs4 import BeautifulSoup
-        
-        def parse_cobertura_xml():
-            xml_files = glob.glob('./TestResults/**/coverage.cobertura.xml', recursive=True)
-            if not xml_files:
-                return None
-            tree = ET.parse(xml_files[0])
-            root = tree.getroot()
-            line_rate = float(root.get('line-rate', 0)) * 100
-            branch_rate = float(root.get('branch-rate', 0)) * 100
-            classes_data = []
-            packages = root.findall('.//package')
-            for package in packages:
-                package_name = package.get('name', 'Unknown')
-                classes = package.findall('.//class')
-                for cls in classes:
-                    class_name = cls.get('name', 'Unknown')
-                    filename = cls.get('filename', 'Unknown')
-                    class_line_rate = float(cls.get('line-rate', 0)) * 100
-                    class_branch_rate = float(cls.get('branch-rate', 0)) * 100
-                    lines = cls.findall('.//line')
-                    total_lines = len(lines)
-                    covered_lines = len([l for l in lines if l.get('hits', '0') != '0'])
-                    classes_data.append({
-                        'Package': package_name,
-                        'Class': class_name,
-                        'File': filename,
-                        'Line Coverage (%)': round(class_line_rate, 2),
-                        'Branch Coverage (%)': round(class_branch_rate, 2),
-                        'Total Lines': total_lines,
-                        'Covered Lines': covered_lines,
-                        'Uncovered Lines': total_lines - covered_lines
-                    })
-            return {
-                'summary': {
-                    'line_coverage': round(line_rate, 2),
-                    'branch_coverage': round(branch_rate, 2)
-                },
-                'classes': classes_data
-            }
         
         def parse_test_results():
             trx_files = glob.glob('./TestResults/**/test-results.trx', recursive=True)
@@ -131,22 +89,47 @@ jobs:
                             if message_elem:
                                 error_message = message_elem.get_text()
                         test_data.append({
+                            'Test ID': f"TC-{len(test_data) + 1:03d}",
                             'Test Name': test_name,
-                            'Result': outcome,
-                            'Duration': duration,
+                            'Description': f"Verify {test_name.replace('_', ' ')}",
+                            'Status': 'Passed' if outcome == 'Passed' else 'Failed',
+                            'Duration (ms)': duration,
                             'Error Message': error_message
                         })
                 except Exception as e:
                     print(f"Error parsing TRX file: {e}")
             return test_data
         
+        def create_statistics(test_data):
+            if not test_data:
+                return pd.DataFrame()
+            
+            total_tests = len(test_data)
+            passed_tests = sum(1 for test in test_data if test['Status'] == 'Passed')
+            failed_tests = total_tests - passed_tests
+            pass_rate = (passed_tests / total_tests * 100) if total_tests > 0 else 0
+            
+            stats_data = [
+                {'Metric': 'Total Test Cases', 'Value': total_tests},
+                {'Metric': 'Passed', 'Value': passed_tests},
+                {'Metric': 'Failed', 'Value': failed_tests},
+                {'Metric': 'Pass Rate (%)', 'Value': f"{pass_rate:.2f}%"},
+                {'Metric': 'Test Run Date', 'Value': datetime.now().strftime("%Y-%m-%d %H:%M:%S")}
+            ]
+            
+            return pd.DataFrame(stats_data)
+        
         def create_excel_report():
-            coverage_data = parse_cobertura_xml()
             test_data = parse_test_results()
+            stats_data = create_statistics(test_data)
+            
             timestamp = datetime.now().strftime("%Y%m%d_%H%M%S")
-            excel_file = f'./coveragereport/Coverage_Report_{timestamp}.xlsx'
+            excel_file = f'./coveragereport/Test_Report_{timestamp}.xlsx'
+            
             with pd.ExcelWriter(excel_file, engine='xlsxwriter') as writer:
                 workbook = writer.book
+                
+                # Define formats
                 header_format = workbook.add_format({
                     'bold': True,
                     'text_wrap': True,
@@ -155,87 +138,89 @@ jobs:
                     'font_color': 'white',
                     'border': 1
                 })
+                
                 cell_format = workbook.add_format({
                     'text_wrap': True,
                     'valign': 'top',
                     'border': 1
                 })
-                summary_data = []
-                if coverage_data:
-                    summary_data = [
-                        ['Metric', 'Value', 'Status'],
-                        ['Line Coverage', f"{coverage_data['summary']['line_coverage']}%", 
-                         '✅ Pass' if coverage_data['summary']['line_coverage'] >= 70 else '❌ Fail'],
-                        ['Branch Coverage', f"{coverage_data['summary']['branch_coverage']}%", ''],
-                        ['Test Run Date', datetime.now().strftime("%Y-%m-%d %H:%M:%S"), ''],
-                        ['Total Test Classes', len(coverage_data['classes']) if coverage_data['classes'] else 0, ''],
-                        ['Minimum Threshold', '70%', ''],
-                    ]
-                else:
-                    summary_data = [
-                        ['Metric', 'Value', 'Status'],
-                        ['Line Coverage', 'N/A', 'No data available'],
-                    ]
-                df_summary = pd.DataFrame(summary_data[1:], columns=summary_data[0])
-                df_summary.to_excel(writer, sheet_name='Summary', index=False)
-                worksheet_summary = writer.sheets['Summary']
-                worksheet_summary.set_column('A:A', 20)
-                worksheet_summary.set_column('B:B', 15)
-                worksheet_summary.set_column('C:C', 15)
-                for row_num in range(len(df_summary) + 1):
-                    for col_num in range(len(df_summary.columns)):
-                        if row_num == 0:
-                            worksheet_summary.write(row_num, col_num, df_summary.columns[col_num], header_format)
-                        else:
-                            worksheet_summary.write(row_num, col_num, df_summary.iloc[row_num-1, col_num], cell_format)
-                if coverage_data and coverage_data['classes']:
-                    df_classes = pd.DataFrame(coverage_data['classes'])
-                    df_classes.to_excel(writer, sheet_name='Coverage Details', index=False)
-                    worksheet_details = writer.sheets['Coverage Details']
-                    worksheet_details.set_column('A:A', 25)
-                    worksheet_details.set_column('B:B', 30)
-                    worksheet_details.set_column('C:C', 40)
-                    worksheet_details.set_column('D:D', 18)
-                    worksheet_details.set_column('E:E', 18)
-                    worksheet_details.set_column('F:F', 12)
-                    worksheet_details.set_column('G:G', 15)
-                    worksheet_details.set_column('H:H', 15)
-                    for row_num in range(len(df_classes) + 1):
-                        for col_num in range(len(df_classes.columns)):
-                            if row_num == 0:
-                                worksheet_details.write(row_num, col_num, df_classes.columns[col_num], header_format)
-                            else:
-                                worksheet_details.write(row_num, col_num, df_classes.iloc[row_num-1, col_num], cell_format)
+                
+                pass_format = workbook.add_format({
+                    'text_wrap': True,
+                    'valign': 'top',
+                    'border': 1,
+                    'bg_color': '#E2EFDA'  # Light green for passed tests
+                })
+                
+                fail_format = workbook.add_format({
+                    'text_wrap': True,
+                    'valign': 'top',
+                    'border': 1,
+                    'bg_color': '#FFE6E6'  # Light red for failed tests
+                })
+                
+                # Create Test Cases sheet
                 if test_data:
                     df_tests = pd.DataFrame(test_data)
-                    df_tests.to_excel(writer, sheet_name='Test Results', index=False)
-                    worksheet_tests = writer.sheets['Test Results']
-                    worksheet_tests.set_column('A:A', 50)
-                    worksheet_tests.set_column('B:B', 12)
-                    worksheet_tests.set_column('C:C', 12)
-                    worksheet_tests.set_column('D:D', 60)
+                    df_tests.to_excel(writer, sheet_name='Test Cases', index=False)
+                    worksheet_tests = writer.sheets['Test Cases']
+                    
+                    # Set column widths
+                    worksheet_tests.set_column('A:A', 10)  # Test ID
+                    worksheet_tests.set_column('B:B', 40)  # Test Name
+                    worksheet_tests.set_column('C:C', 50)  # Description
+                    worksheet_tests.set_column('D:D', 12)  # Status
+                    worksheet_tests.set_column('E:E', 15)  # Duration
+                    worksheet_tests.set_column('F:F', 50)  # Error Message
+                    
+                    # Apply formatting to cells
                     for row_num in range(len(df_tests) + 1):
                         for col_num in range(len(df_tests.columns)):
                             if row_num == 0:
                                 worksheet_tests.write(row_num, col_num, df_tests.columns[col_num], header_format)
                             else:
                                 cell_value = df_tests.iloc[row_num-1, col_num]
-                                if col_num == 1 and cell_value == 'Failed':
-                                    fail_format = workbook.add_format({
-                                        'text_wrap': True,
-                                        'valign': 'top',
-                                        'border': 1,
-                                        'bg_color': '#FFE6E6'
-                                    })
-                                    worksheet_tests.write(row_num, col_num, cell_value, fail_format)
+                                # Apply different formatting based on test status
+                                if col_num == 3:  # Status column
+                                    if cell_value == 'Passed':
+                                        worksheet_tests.write(row_num, col_num, cell_value, pass_format)
+                                    else:
+                                        worksheet_tests.write(row_num, col_num, cell_value, fail_format)
                                 else:
                                     worksheet_tests.write(row_num, col_num, cell_value, cell_format)
-            print(f"✅ Excel report generated: {excel_file}")
+                
+                # Create Test Statistics sheet
+                if not stats_data.empty:
+                    stats_data.to_excel(writer, sheet_name='Test Statistic', index=False)
+                    worksheet_stats = writer.sheets['Test Statistic']
+                    
+                    # Set column widths
+                    worksheet_stats.set_column('A:A', 25)  # Metric
+                    worksheet_stats.set_column('B:B', 25)  # Value
+                    
+                    # Apply formatting to cells
+                    for row_num in range(len(stats_data) + 1):
+                        for col_num in range(len(stats_data.columns)):
+                            if row_num == 0:
+                                worksheet_stats.write(row_num, col_num, stats_data.columns[col_num], header_format)
+                            else:
+                                worksheet_stats.write(row_num, col_num, stats_data.iloc[row_num-1, col_num], cell_format)
+                
+            print(f"✅ Excel test report generated: {excel_file}")
             return excel_file
+        
         if __name__ == "__main__":
             excel_file = create_excel_report()
         EOF
         python generate_excel_report.py
+
+    - name: Upload Excel test reports
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: test-report
+        path: ./coveragereport/Test_Report_*.xlsx
+        retention-days: 30
 
     - name: Display coverage summary
       run: |
