--- a/BlindTreaure.UnitTest/BlindTreaure.UnitTest.csproj
+++ b/BlindTreaure.UnitTest/BlindTreaure.UnitTest.csproj
@@ -19,6 +19,7 @@
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="FluentAssertions" Version="6.12.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.15"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.0"/>
         <PackageReference Include="MockQueryable.Moq" Version="7.0.0"/>
         <PackageReference Include="Moq" Version="4.20.72"/>
@@ -36,6 +37,11 @@
 
     <ItemGroup>
         <Using Include="Xunit"/>
+    </ItemGroup>
+
+
+    <ItemGroup>
+        <Folder Include="Controller\"/>
     </ItemGroup>
 
 </Project>
